--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,9 @@
   <link href="https://fonts.googleapis.com/css?family=Notable&display=swap" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css?family=Bellefair&display=swap" rel="stylesheet">
-   <!--
+  <link href="https://fonts.googleapis.com/css?family=Holtwood+One+SC&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Ramabhadra&display=swap" rel="stylesheet">
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
